fixes problem with jumping placeholder in .page-header__search-input

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -41,6 +41,7 @@
     width: 315px;
     height: 50px;
     padding-left: 40px;
+    border-bottom: 2px solid transparent;
     font-weight: 300;
     font-size: 15px;
     line-height: 50px;
@@ -49,7 +50,7 @@
   }
 
   &__search-input:focus {
-    border-bottom: 2px solid #000;
+    border-color: #000;
   }
 
   &__search-input::placeholder {
